--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,5 +31,4 @@ input[type="text"] {
   border: 1px solid orange;
   border-radius: 8px;
   color: inherit;
-  margin-bottom: 1rem;
 }
